# MT5-ibkr-complete

./: .gitignore  CPP_VERSION_COMPLETE.md  README.md  SETUP_COMPLETE.md
cpp/: AutoFibIndicator.cpp  AutoFibIndicator.h  CMakeLists.txt  DecimalStub.cpp  IBKRAutoFibClient.cpp  IBKRAutoFibClient.h  README.md  main.cpp
python/: README.md  autofib_ibkr.py  test_autofib.py
